--- a/2020-07-21/tidytuesday_2020-07-21.Rmd
+++ b/2020-07-21/tidytuesday_2020-07-21.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r}
-pacman::p_load(tidyverse, tidytuesdayR, ggrepel, ggtext, gghighlight, geofacet)
+pacman::p_load(tidyverse, tidytuesdayR, ggrepel, ggtext, gghighlight, geofacet, RColorBrewer)
 ```
 
 ```{r}
@@ -101,4 +101,49 @@ outcome_percents %>%
     theme_minimal()
 ```
 
+
+```{r, message = FALSE, fig.width=4, fig.height=3}
+# Widen & summarize data by territory
+outcome_percents <- animal_outcomes %>%
+    gather(key = "region", value = "count", -year, -animal_type, -outcome) %>%
+    filter(region != "Total") %>%
+    group_by(year, region, outcome) %>%
+    summarize(count = sum(count, na.rm = T)) %>%
+    mutate(total = sum(count, na.rm = T),
+           percent = count/total)
+
+# Create custom geofacet grid to wrap ACT name
+my_aus_grid <- aus_grid1 %>%
+    mutate(name = if_else(code == "ACT", "Australian Capital\n Territory", name))
+
+plot <- outcome_percents %>%
+    filter(outcome == "Euthanized") %>%
+    mutate(Euthanized = count,
+           `Not Euthanized` = total - count) %>%
+    gather("measure", "value", Euthanized, `Not Euthanized`) %>%
+    mutate(measure = fct_relevel(measure, c("Not Euthanized", "Euthanized")),
+           alpha = if_else(region == "QLD", 1, 0.5)) %>%
+    ggplot(aes(x = year, y = value, fill = measure, alpha = alpha)) +
+    geom_area() +
+    scale_alpha_identity() +
+    scale_y_continuous(labels = function(x) paste0(x/1000,"K")) +
+    scale_x_continuous() +
+    scale_fill_brewer(palette = "Paired")+ 
+    facet_geo(~region, grid = my_aus_grid, label = "name", scales = "free_x") +
+    labs(x = NULL,
+         y = NULL,
+         fill = NULL,
+         subtitle = "RSPCA Animal Outcomes 1999 - 2018",
+         title = "Queensland Outshines Other Territories\nReducing Euthanization While Increasing Rescues",
+         caption = "@jacob_schwan #TidyTuesday") +
+    theme_minimal() +
+    theme(legend.position = c(0.25, 0.25),
+          legend.justification = c(0, 0))
+
+plot
+```
+
+```{r}
+ggsave("RSPCA_plot.png", plot = plot, width = 7, height = 7, units = "in", dpi = 320)
+```
 
